# llmstyler

./: .gitignore  README.md  pyproject.toml
configs/base_mixes/: smoltalk_style_mix.yaml
configs/pipelines/: trump.yaml
configs/styles/: trump_public_speaking.yaml
configs/train/: qwen25_3b_trump.yaml
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
src/llmstyler/: __init__.py  cli.py  ease.py  hub.py  io.py  mix.py  pipeline.py  restyle.py  runbook.py  standards.py
