[project]
name = "llmstyler"
version = "0.1.0"
description = "Config-driven speaking-style dataset generation and model publishing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=3.0.0",
  "huggingface_hub>=0.26.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[project.scripts]
llmstyler = "llmstyler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmstyler"]

[tool.ruff]
line-length = 100
target-version = "py311"
